--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "next": "15.2.1",
+    "next-optimized-images": "^2.6.2",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
